Fixed iPad landscape alignment issue.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,6 +24,7 @@ body {
  .mascot {
    height: 200px;
    margin-bottom: 4rem !important;
+   margin-top: 2rem !important;
   }
 
 
